examples/bad/ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION/sequencing_wrong_return_type.st
language core;
extend with #sequencing, #unit-type;

fn main(n : Nat) -> Bool {
	return (fn(a : Nat) { return unit }) (0); (fn(a : Nat) { return a }) (0); 0
}
//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
